--- a/css/container.css
+++ b/css/container.css
@@ -1,4 +1,4 @@
-.main-container {
+.main-container-blue {
   height: calc(100vh - 130px);
   width: 100vw;
   display: flex;
@@ -7,11 +7,103 @@
   align-items: center;
 }
 
-.about-container {
+.main-container-white {
   height: calc(100vh - 130px);
   width: 100vw;
   display: flex;
   background-color: white;
   justify-content: center;
   align-items: center;
+}
+
+.intro-content {
+  display: flex;
+  justify-items: flex-end;
+  align-content: flex-end;
+}
+
+.about-container {
+  display: flex;
+  height: 500px;
+  width: 80%;
+  background-color: white;
+  justify-content: center;
+  align-items: flex-start;
+  border: solid black 3px;
+  text-align: center;
+}
+
+.about-grid {
+  width: 100%;
+  height: 100%;
+  background: white;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: 0.3fr 0.7fr;
+}
+
+.projects-container {
+  display: flex;
+  height: calc(100vh - 130px);
+  width: 100vw;
+  background-color: white;
+  justify-content: center;
+  align-items: center;
+
+}
+
+.projects-grid {
+  width: 100%;
+  height: 100%;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+}
+
+.project1 { 
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100px;
+  width: 100px;
+  background-color: black; 
+  grid-row: 1 / 2; 
+  grid-column: 1 / 2;
+ 
+}
+
+.about-header {
+  width: 100%;
+  grid-row: 1 / 2; 
+  grid-column: 1 / 2;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.personality-content {
+  width: 100%;
+  grid-row: 2 / 3; 
+  grid-column: 1 / 2;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+}
+
+.work-header {
+  width: 100%;
+  grid-row: 1 / 2; 
+  grid-column: 2 / 3;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.work-content {
+  width: 100%;
+  grid-row: 2 / 3; 
+  grid-column: 2 / 3;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
 }
