--- a/css/content.css
+++ b/css/content.css
@@ -3,16 +3,35 @@ h1 {
   justify-content: center;
   align-items: center;
   text-align: center;
-  font-family: 'Pacifico', cursive;
-  color: white;
-  text-shadow: 0px 5px 5px rgba(0,0,0,0.5);
+  font-family: 'Patua One', cursive;
+  color: black;
   padding-bottom: 180px;
-  font-size: 48px;
+  font-size: 44px;
+}
+
+h2 {
+  text-align: center;
+  font-family: 'Patua One', cursive;
+  color: black;
+  /* text-shadow: 0px 5px 5px rgba(0,0,0,0.5); */
+  font-size: 20px;
+}
+
+h3 {
+  font-family: 'Montserrat', sans-serif;
+  color: black;
+  font-size: 20px;
+}
+
+p {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 16px;
 }
 
 .avatar-logo {
   display: flex;
-  align-items: center;
-  height: 400px;
-  padding-bottom: 130px;
+  justify-items: center;
+  height: 200px;
+  margin-bottom: 130px;
 }
+
