finished projects page

--- a/css/container.css
+++ b/css/container.css
@@ -1,11 +1,11 @@
-.main-container-blue {
+/* .main-container-blue {
   height: calc(100vh - 130px);
   width: 100vw;
   display: flex;
   background-color: #004E71;
   justify-content: center;
   align-items: center;
-}
+} */
 
 .main-container-white {
   height: calc(100vh - 130px);
@@ -22,26 +22,6 @@
   align-content: flex-end;
 }
 
-.about-container {
-  display: flex;
-  height: 500px;
-  width: 80%;
-  background-color: white;
-  justify-content: center;
-  align-items: flex-start;
-  border: solid black 3px;
-  text-align: center;
-}
-
-.about-grid {
-  width: 100%;
-  height: 100%;
-  background: white;
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: 0.3fr 0.7fr;
-}
-
 .projects-container {
   display: flex;
   height: calc(100vh - 130px);
@@ -49,61 +29,190 @@
   background-color: white;
   justify-content: center;
   align-items: center;
-
 }
 
 .projects-grid {
   width: 100%;
   height: 100%;
+  background-color: white;
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: repeat(2, 1fr);
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: 1fr 0.5fr 1fr;
 }
 
 .project1 { 
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100px;
-  width: 100px;
-  background-color: black; 
+  height: 100%;
+  width: 100%;
+  background-color: white; 
   grid-row: 1 / 2; 
   grid-column: 1 / 2;
- 
+  border: solid black 2px;
+  border-radius: 2%;
 }
 
-.about-header {
-  width: 100%;
-  grid-row: 1 / 2; 
-  grid-column: 1 / 2;
+.project2 { 
   display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  width: 100%;
+  background-color: white; 
+  grid-row: 1 / 2; 
+  grid-column: 2 / 3;
+  border: solid black 2px;
+  border-radius: 2%;
+}
+
+.project3 { 
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  width: 100%;
+  background-color: white; 
+  grid-row: 1 / 2; 
+  grid-column: 3 / 4;
+  border: solid black 2px;
+  border-radius: 2%;
+}
+
+.project4 { 
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  width: 100%;
+  background-color: white; 
+  grid-row: 3 / 4; 
+  grid-column: 1 / 2;
+  border: solid black 2px;
+  border-radius: 2%;
+}
+
+.project5 { 
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  width: 100%;
+  background-color: white; 
+  grid-row: 3 / 4; 
+  grid-column: 2 / 3;
+  border: solid black 2px;
+  border-radius: 2%;
+}
+
+.project6 { 
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  width: 100%;
+  background-color: white; 
+  grid-row: 3 / 4; 
+  grid-column: 3 / 4;
+  border: solid black 2px;
+  border-radius: 2%;
+}
+
+.about-container {
+  display: flex;
+  height: calc(100vh - 130px);
+  width: 100vw;
+  background-color: white;
   justify-content: center;
   align-items: center;
 }
 
-.personality-content {
+.about-grid {
   width: 100%;
-  grid-row: 2 / 3; 
-  grid-column: 1 / 2;
-  display: flex;
-  justify-content: center;
-  align-items: flex-start;
+  height: 100%;
+  background-color: white;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: 1fr 0.5fr 1fr;
 }
 
-.work-header {
-  width: 100%;
-  grid-row: 1 / 2; 
-  grid-column: 2 / 3;
+.career-header {
   display: flex;
   justify-content: center;
   align-items: center;
+  height: 100%;
+  width: 100%;
+  background-color: white; 
+  grid-row: 1 / 2; 
+  grid-column: 1 / 2;
+  border: solid black 2px;
+  border-radius: 2%;
 }
 
-.work-content {
-  width: 100%;
-  grid-row: 2 / 3; 
-  grid-column: 2 / 3;
+.job1 {
   display: flex;
   justify-content: center;
-  align-items: flex-start;
+  align-items: center;
+  height: 100%;
+  width: 100%;
+  grid-row: 1 / 2; 
+  grid-column: 2 / 3;
+  border: solid black 2px;
+  background: url(./img/salsas.png);
+  background-position: center, center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  border-radius: 2%;
+}
+
+.job2 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  width: 100%;
+  background-color: white; 
+  grid-row: 1 / 2; 
+  grid-column: 3 / 4;
+  border: solid black 2px;
+  border-radius: 2%;
+}
+
+.education-header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  width: 100%;
+  background-color: white; 
+  grid-row: 3 / 4; 
+  grid-column: 1 / 2;
+  border: solid black 2px;
+  border-radius: 2%;
+}
+
+.education1 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  width: 100%;
+  background-color: white; 
+  grid-row: 3 / 4; 
+  grid-column: 2 / 3;
+  border: solid black 2px;
+  border-radius: 2%;
+}
+
+.education2 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  width: 100%;
+  background-color: white; 
+  grid-row: 3 / 4; 
+  grid-column: 3 / 4;
+  border: solid black 2px;
+  border-radius: 2%;
 }
