--- a/css/index.css
+++ b/css/index.css
@@ -17,10 +17,10 @@
 }
 
 /* Any style that is common to all pages */
-body {
-  /* background-color: #004E71; */
+/* body {
+  background-color: #004E71;
   font-family: 'Open Sans', sans-serif;
-}
+} */
 
 /* Define variables for use in entire project */
 
