--- a/css/content.css
+++ b/css/content.css
@@ -5,17 +5,18 @@ h1 {
   text-align: center;
   font-family: 'Patua One', cursive;
   color: black;
+  /* text-shadow: 0px 4px 4px rgba(0,0,0,0.5); */
   padding-bottom: 180px;
   font-size: 44px;
 }
 
-h2 {
+/* h2 {
   text-align: center;
   font-family: 'Patua One', cursive;
   color: black;
-  /* text-shadow: 0px 5px 5px rgba(0,0,0,0.5); */
+  text-shadow: 0px 5px 5px rgba(0,0,0,0.5);
   font-size: 20px;
-}
+} */
 
 h3 {
   font-family: 'Montserrat', sans-serif;
@@ -35,3 +36,55 @@ p {
   margin-bottom: 130px;
 }
 
+.project1:hover {
+  transform: scale(1.1);
+}
+
+.project2:hover {
+  transform: scale(1.1);
+}
+
+.project3:hover {
+  transform: scale(1.1);
+}
+
+.project4:hover {
+  transform: scale(1.1);
+}
+
+.project5:hover {
+  transform: scale(1.1);
+}
+
+.project6:hover {
+  transform: scale(1.1);
+}
+
+.career-header:hover {
+  transform: scale(1.1);
+}
+
+.job1:hover {
+  transform: scale(1.1);
+}
+
+.job2:hover {
+  transform: scale(1.1);
+}
+
+.education-header:hover {
+  transform: scale(1.1);
+}
+
+.education1:hover {
+  transform: scale(1.1);
+}
+
+.education2:hover {
+  transform: scale(1.1);
+}
+
+#salsas {
+  height: 100%;
+  width: 100%;
+}
