--- a/css/content.css
+++ b/css/content.css
@@ -19,11 +19,11 @@ h1 {
 } */
 
 h3 {
-  font-family: 'Montserrat', sans-serif;
-  color: black;
-  font-size: 20px;
+  font-family: 'Patua One', cursive;
+  color: white;
+  font-size: 19px;
 }
-
+ 
 p {
   font-family: 'Montserrat', sans-serif;
   font-size: 16px;
@@ -61,30 +61,25 @@ p {
 }
 
 .career-header:hover {
-  transform: scale(1.1);
+  transform: scale(1.05);
 }
 
 .job1:hover {
-  transform: scale(1.1);
+  transform: scale(1.05);
 }
 
 .job2:hover {
-  transform: scale(1.1);
+  transform: scale(1.05);
 }
 
 .education-header:hover {
-  transform: scale(1.1);
+  transform: scale(1.05);
 }
 
 .education1:hover {
-  transform: scale(1.1);
+  transform: scale(1.05);
 }
 
 .education2:hover {
-  transform: scale(1.1);
-}
-
-#salsas {
-  height: 100%;
-  width: 100%;
+  transform: scale(1.05);
 }
