--- a/css/container.css
+++ b/css/container.css
@@ -1,12 +1,3 @@
-/* .main-container-blue {
-  height: calc(100vh - 130px);
-  width: 100vw;
-  display: flex;
-  background-color: #004E71;
-  justify-content: center;
-  align-items: center;
-} */
-
 .main-container-white {
   height: calc(100vh - 130px);
   width: 100vw;
@@ -22,15 +13,6 @@
   align-content: flex-end;
 }
 
-.projects-container {
-  display: flex;
-  height: calc(100vh - 130px);
-  width: 100vw;
-  background-color: white;
-  justify-content: center;
-  align-items: center;
-}
-
 .projects-grid {
   width: 100%;
   height: 100%;
@@ -38,108 +20,6 @@
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: 1fr 0.5fr 1fr;
-}
-
-.project1 { 
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100%;
-  width: 100%;
-  background-color: white; 
-  grid-row: 1 / 2; 
-  grid-column: 1 / 2;
-  border: solid black 2px;
-  border-radius: 2%;
-  background: url(./img/adam-miller-1053911-unsplash.jpg);
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-
-.project2 { 
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100%;
-  width: 100%;
-  background-color: white; 
-  grid-row: 1 / 2; 
-  grid-column: 2 / 3;
-  border: solid black 2px;
-  border-radius: 2%;
-  background: url(./img/aditya-chinchure-494048-unsplash.jpg);
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-
-.project3 { 
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100%;
-  width: 100%;
-  background-color: white; 
-  grid-row: 1 / 2; 
-  grid-column: 3 / 4;
-  border: solid black 2px;
-  border-radius: 2%;
-  background: url(./img/larm-rmah-47685-unsplash.jpg);
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-
-.project4 { 
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100%;
-  width: 100%;
-  background-color: white; 
-  grid-row: 3 / 4; 
-  grid-column: 1 / 2;
-  border: solid black 2px;
-  border-radius: 2%;
-  background: url(./img/david-east-152755-unsplash.jpg);
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-
-.project5 { 
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100%;
-  width: 100%;
-  background-color: white; 
-  grid-row: 3 / 4; 
-  grid-column: 2 / 3;
-  border: solid black 2px;
-  border-radius: 2%;
-  background: url(./img/benjamin-behre-1049704-unsplash.jpg);
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-
-.project6 { 
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100%;
-  width: 100%;
-  background-color: white; 
-  grid-row: 3 / 4; 
-  grid-column: 3 / 4;
-  border: solid black 2px;
-  border-radius: 2%;
-  background: url(./img/taneli-lahtinen-1027400-unsplash.jpg);
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
 }
 
 .about-container {
@@ -160,95 +40,45 @@
   grid-template-rows: 1fr 0.5fr 1fr;
 }
 
-.career-header {
+.contact-grid {
+  width: 100%;
+  height: 100%;
+  background-color: white;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: 0.5fr 1fr 1fr;
+}
+
+.contact-header {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100%;
-  width: 100%;
-  background-color: #e79b25; 
   grid-row: 1 / 2; 
   grid-column: 2 / 3;
-  border: 2px solid black;
-  /* border-radius: 2%; */
+  font-family: 'Patua One', cursive;
+  font-size: 31px;
 }
 
-.job1 {
+.form-container {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  text-align: center;
+  grid-row: 2 / 3; 
+  grid-column: 2 / 3;
+}
+
+.form-bottom-container {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100%;
-  width: 100%;
-  grid-row: 1 / 2; 
-  grid-column: 1 / 2;
-  border: 2px solid black;
-  background: url(./img/salsas.png);
-  background-position: center, center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  /* border-radius: 2%; */
-}
-
-.job2 {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100%;
-  width: 100%;
-  background-color: white; 
-  grid-row: 1 / 2; 
-  grid-column: 3 / 4;
-  border: solid black 2px;
-  background: url(./img/cc239a-3ad0-82fc0.jpeg);
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  /* border-radius: 2%; */
-}
-
-.education-header {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100%;
-  width: 100%;
-  background-color:#004E71; 
+  flex-direction: column;
+  text-align: center;
   grid-row: 3 / 4; 
   grid-column: 2 / 3;
-  border: solid black 2px;
-  /* border-radius: 2%; */
 }
 
-.education1 {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100%;
-  width: 100%;
-  background-color: white; 
-  grid-row: 3 / 4; 
-  grid-column: 1 / 2;
-  border: solid black 2px;
-  /* border-radius: 2%; */
-  background: url(./img/26_Swinburne.jpg);
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
+.social-container {
+  margin-top: 20px;
 }
 
-.education2 {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100%;
-  width: 100%;
-  background-color: white; 
-  grid-row: 3 / 4; 
-  grid-column: 3 / 4;
-  border: solid black 2px;
-  /* border-radius: 2%; */
-  background: url(./img/coder.jpg);
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
