--- a/css/container.css
+++ b/css/container.css
@@ -9,8 +9,19 @@
 
 .intro-content {
   display: flex;
-  justify-items: flex-end;
-  align-content: flex-end;
+  justify-content: center;
+  align-items: flex-start;
+  grid-row: 3 / 4; 
+  grid-column: 1 / 4;
+}
+
+.intro-grid {
+  width: 100%;
+  height: 100%;
+  background-color: white;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: 1fr 0.5fr 1fr;
 }
 
 .projects-grid {
@@ -34,7 +45,7 @@
 .about-grid {
   width: 100%;
   height: 100%;
-  background-color: white;
+  /* background-color: white; */
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: 1fr 0.5fr 1fr;
