--- a/css/content.css
+++ b/css/content.css
@@ -6,19 +6,14 @@ h1 {
   font-family: 'Patua One', cursive;
   color: black;
   /* text-shadow: 0px 4px 4px rgba(0,0,0,0.5); */
-  padding-bottom: 180px;
+  margin-bottom: 130px;
+  padding: 20px;
   font-size: 44px;
+  border: solid black 5px;
 }
 
-/* h2 {
-  text-align: center;
-  font-family: 'Patua One', cursive;
-  color: black;
-  text-shadow: 0px 5px 5px rgba(0,0,0,0.5);
-  font-size: 20px;
-} */
-
 h3 {
+  text-align: center;
   font-family: 'Patua One', cursive;
   color: white;
   font-size: 19px;
@@ -29,16 +24,25 @@ p {
   font-size: 16px;
 }
 
+.avatar {
+  height: 200px;
+}
+
 .avatar-logo {
   display: flex;
-  justify-items: center;
-  height: 200px;
-  margin-bottom: 130px;
+  justify-content: center;
+  align-items: flex-end;
+  grid-row: 1 / 2; 
+  grid-column: 2 / 3;
 }
 
 .social-button {
   height: 35px;
   width: 40px;
+}
+
+.social-button:hover {
+  transform: scale(1.1)
 }
 
 .project1:hover {
@@ -65,7 +69,7 @@ p {
   transform: scale(1.1);
 }
 
-.career-header:hover {
+/* .career-header:hover {
   transform: scale(1.05);
 }
 
@@ -87,14 +91,14 @@ p {
 
 .education2:hover {
   transform: scale(1.05);
-}
+} */
 
 #name {
   height: 38px;
   width: 294px;
   font-family: 'Montserrat', sans-serif;
   /* text-align: center; */
-  box-shadow: 0 10px 6px -6px #777;
+  /* box-shadow: 0 10px 6px -6px #777; */
 }
 
 #email {
@@ -102,7 +106,7 @@ p {
   width: 294px;
   font-family: 'Montserrat', sans-serif;
   /* text-align: center; */
-  box-shadow: 0 10px 6px -6px #777;
+  /* box-shadow: 0 10px 6px -6px #777; */
 }
 
 #comment-box {
@@ -110,9 +114,12 @@ p {
   height: 75px;
   width: 294px;
   text-align: start;
-  box-shadow: 0 10px 6px -6px #777;
+  /* box-shadow: 0 10px 6px -6px #777; */
+  font-size: 11px;
 }
 
 #submit {
+  margin-bottom: 20px;
   font-family: 'Montserrat', sans-serif;
+  height: 30px;
 }
