reduce image size

--- a/css/cards.css
+++ b/css/cards.css
@@ -52,7 +52,7 @@
   grid-column: 1 / 2;
   /* border: solid black 2px; */
   border-radius: 2%;
-  background: url(./img/adam-miller-1053911-unsplash.jpg);
+  background: url(./img/adam-miller.jpg);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -69,7 +69,7 @@
   grid-column: 2 / 3;
   /* border: solid black 2px; */
   border-radius: 2%;
-  background: url(./img/aditya-chinchure-494048-unsplash.jpg);
+  background: url(./img/aditya-chinchure.jpg);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -86,7 +86,7 @@
   grid-column: 3 / 4;
   /* border: solid black 2px; */
   border-radius: 2%;
-  background: url(./img/larm-rmah-47685-unsplash.jpg);
+  background: url(./img/larm-rmah.jpg);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -103,7 +103,7 @@
   grid-column: 1 / 2;
   /* border: solid black 2px; */
   border-radius: 2%;
-  background: url(./img/david-east-152755-unsplash.jpg);
+  background: url(./img/david-east.jpg);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -120,7 +120,7 @@
   grid-column: 2 / 3;
   /* border: solid black 2px; */
   border-radius: 2%;
-  background: url(./img/benjamin-behre-1049704-unsplash.jpg);
+  background: url(./img/benjamin-behre.jpg);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -137,7 +137,7 @@
   grid-column: 3 / 4;
   /* border: solid black 2px; */
   border-radius: 2%;
-  background: url(./img/taneli-lahtinen-1027400-unsplash.jpg);
+  background: url(./img/taneli-lahtinen.jpg);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
