--- a/css/content.css
+++ b/css/content.css
@@ -18,6 +18,11 @@ h3 {
   color: white;
   font-size: 19px;
 }
+
+h4 {
+  font-family: 'Montserrat', sans-serif;
+  color: white;
+}
  
 p {
   font-family: 'Montserrat', sans-serif;
