--- a/css/cards.css
+++ b/css/cards.css
@@ -11,23 +11,6 @@
   /* border-radius: 2%; */
 }
 
-.job2 {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100%;
-  width: 100%;
-  background-color: white; 
-  grid-row: 1 / 2; 
-  grid-column: 3 / 4;
-  /* border: solid black 2px; */
-  background: url(./img/cc239a-3ad0-82fc0.jpeg);
-  background-position: center;
-  background-repeat: repeat;
-  background-size: contain;
-  /* border-radius: 2%; */
-}
-
 .education-header {
   display: flex;
   justify-content: center;
@@ -190,6 +173,9 @@
 }
 
 .job1-back {
+  display: flex;
+  justify-content: center;
+  align-items: center; 
   background-color: #e79b25;
   transform: rotateY(180deg);
 }
@@ -247,6 +233,10 @@
 }
 
 .job2-back {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
   background-color: #e79b25;
   color: white;
   transform: rotateY(180deg);
