--- a/css/cards.css
+++ b/css/cards.css
@@ -41,6 +41,18 @@
   background-size: cover;
 }
 
+.project-overlay {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  width: 100%;
+  opacity: 0;
+  transition: .5s ease;
+  background: rgba(77, 77, 77, .9);
+  border-radius: 2%;
+}
+
 .project2 { 
   display: flex;
   justify-content: center;
