--- a/css/container.css
+++ b/css/container.css
@@ -15,6 +15,16 @@
   grid-column: 1 / 4;
 }
 
+.intro-paragraph {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: solid black 2px;  
+  padding: 5px;
+  margin: 0 10px 0 10px;
+  border-radius: 13px;
+}
+
 .intro-grid {
   width: 100%;
   height: 100%;
