--- a/css/index.css
+++ b/css/index.css
@@ -21,59 +21,28 @@
 
   
 @media only screen and (max-width: 435px) {
-  /* .navbar-logo {
-    float: top;
-    display: flex;
-    align-items: center;
-    height: 130px;
-    width: 100px;
-  } */
-  .navbar-links {
-    display: none;
+  .white-navbar {
+    float: left;
+  }
+  
+  .black-link {
+    margin: 0px 3px;
+    text-decoration: none;
+    color: black;
+    font-family: 'Patua One', cursive;
   }
 
-.job1 {
-  /* border: 2px solid black; */
-  background: url(./img/salsas.png);
-  background-position: center, center;
-  background-repeat: repeat;
-  background-size: contain;
-  /* border-radius: 2%; */
-}
-
-.job2 {
-  height: 100%;
-  width: 100%;
-  background-color: white; 
-  /* border: solid black 2px; */
-  background: url(./img/cc239a-3ad0-82fc0.jpeg);
-  background-position: center;
-  background-repeat: repeat;
-  background-size: contain;
-  /* border-radius: 2%; */
-}
-
-.education1 {  
-  height: 100%;
-  width: 100%;
-  /* border: solid black 2px; */
-  /* border-radius: 2%; */
-  background: url(./img/unilogo.png);
-  background-position: center;
-  background-repeat: repeat;
-  background-size: contain;
-}
-
-.education2 {
-  height: 100%;
-  width: 100%;
-  background-color: white; 
-  /* border: solid black 2px; */
-  /* border-radius: 2%; */
-  background: url(./img/coder.jpg);
-  background-position: center;
-  background-repeat: repeat;
-  background-size: contain;
-}
-  
+  h1 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    font-family: 'Patua One', cursive;
+    color: black;
+    /* text-shadow: 0px 4px 4px rgba(0,0,0,0.5); */
+    margin: 0 10px 130px 10px;
+    padding: 20px;
+    font-size: 26px;
+    border: solid black 5px;
+  }
 }
