--- a/css/navbar.css
+++ b/css/navbar.css
@@ -28,14 +28,14 @@
 
 .navbar-links {
   display: flex;
-  float: right;
+  justify-content: flex-end;
   height: 100%;
   align-items: center;
-  padding: 0 25px 0 0;
+  margin: 0 25px 0 0;
 }
 
 .black-link {
-  padding: 0px 15px;
+  margin: 0px 15px;
   text-decoration: none;
   color: black;
   font-family: 'Patua One', cursive;
