--- a/css/cards.css
+++ b/css/cards.css
@@ -7,8 +7,6 @@
   background-color: #e79b25; 
   grid-row: 1 / 2; 
   grid-column: 1 / 2;
-  /* border: 2px solid black; */
-  /* border-radius: 2%; */
 }
 
 .education-header {
@@ -20,8 +18,6 @@
   background-color:#004E71; 
   grid-row: 3 / 4; 
   grid-column: 1 / 2;
-  /* border: solid black 2px; */
-  /* border-radius: 2%; */
 }
 
 .project1 { 
@@ -33,7 +29,6 @@
   background-color: white; 
   grid-row: 1 / 2; 
   grid-column: 1 / 2;
-  /* border: solid black 2px; */
   border-radius: 2%;
   background: url(./img/adam-miller.jpg);
   background-position: center;
@@ -62,7 +57,6 @@
   background-color: white; 
   grid-row: 1 / 2; 
   grid-column: 2 / 3;
-  /* border: solid black 2px; */
   border-radius: 2%;
   background: url(./img/aditya-chinchure.jpg);
   background-position: center;
@@ -79,7 +73,6 @@
   background-color: white; 
   grid-row: 1 / 2; 
   grid-column: 3 / 4;
-  /* border: solid black 2px; */
   border-radius: 2%;
   background: url(./img/larm-rmah.jpg);
   background-position: center;
@@ -96,7 +89,6 @@
   background-color: white; 
   grid-row: 3 / 4; 
   grid-column: 1 / 2;
-  /* border: solid black 2px; */
   border-radius: 2%;
   background: url(./img/david-east.jpg);
   background-position: center;
@@ -130,7 +122,6 @@
   background-color: white; 
   grid-row: 3 / 4; 
   grid-column: 3 / 4;
-  /* border: solid black 2px; */
   border-radius: 2%;
   background: url(./img/taneli-lahtinen.jpg);
   background-position: center;
@@ -149,8 +140,10 @@
   background-color: transparent;
   width: 100%;
   height: 100%;
-  /* border: 1px solid #f1f1f1; */
   perspective: 1000px;
+  -webkit-perspective: 1000px;
+  -o-perspective: 1000px;
+  -moz-perspective: 1000px;
 }
 
 .flip-card1-inner {
@@ -160,12 +153,19 @@
   text-align: center;
   transition: transform 1s;
   transform-style: preserve-3d;
-  /* transform-origin: center right; */
+  -webkit-transform-style: preserve-3d;
+  -webkit-transition: -webkit-transform 1s;
+  -o-transform-style: preserve-3d;
+  -o-transition: -o-transform 1s;
+  -moz-transform-style: preserve-3d;
+  -moz-transition: -moz-transform 1s;
 }
 
 .flip-card1:hover .flip-card1-inner {
   transform: rotateY(180deg);
-  /* transform: translateX(-100%) rotateY(180deg); */
+  -moz-transform: rotateY(180deg);
+  -webkit-transform: rotateY(180deg);
+  -o-transform: rotateY(180deg);
 }
 
 .job1, .job1-back {
@@ -173,15 +173,16 @@
   width: 100%;
   height: 100%;
   backface-visibility: hidden;
+  -moz-backface-visibility: hidden;
+  -webkit-backface-visibility: hidden;
+  -o-backface-visibility: hidden;
 }
 
 .job1 {
-  /* border: 2px solid black; */
   background: url(./img/salsas.png);
   background-position: center, center;
   background-repeat: repeat;
   background-size: contain;
-  /* border-radius: 2%; */
 }
 
 .job1-back {
@@ -190,12 +191,10 @@
   align-items: center; 
   background-color: #e79b25;
   transform: rotateY(180deg);
+  -moz-transform: rotateY(180deg);
+  -webkit-transform: rotateY(180deg);
+  -o-transform: rotateY(180deg);
 }
-
-
-
-
-
 
 .flip-card2 {
   display: flex;
@@ -206,8 +205,10 @@
   background-color: transparent;
   width: 100%;
   height: 100%;
-  /* border: 1px solid #f1f1f1; */
   perspective: 1000px;
+  -webkit-perspective: 1000px;
+  -o-perspective: 1000px;
+  -moz-perspective: 1000px;
 }
 
 .flip-card2-inner {
@@ -217,12 +218,19 @@
   text-align: center;
   transition: transform 1s;
   transform-style: preserve-3d;
-  /* transform-origin: center right; */
+  -webkit-transform-style: preserve-3d;
+  -webkit-transition: -webkit-transform 1s;
+  -o-transform-style: preserve-3d;
+  -o-transition: -o-transform 1s;
+  -moz-transform-style: preserve-3d;
+  -moz-transition: -moz-transform 1s;
 }
 
 .flip-card2:hover .flip-card2-inner {
   transform: rotateY(180deg);
-  /* transform: translateX(-100%) rotateY(180deg); */
+  -moz-transform: rotateY(180deg);
+  -webkit-transform: rotateY(180deg);
+  -o-transform: rotateY(180deg);
 }
 
 .job2, .job2-back {
@@ -230,18 +238,19 @@
   width: 100%;
   height: 100%;
   backface-visibility: hidden;
+  -moz-backface-visibility: hidden;
+  -webkit-backface-visibility: hidden;
+  -o-backface-visibility: hidden;
 }
 
 .job2 {
   height: 100%;
   width: 100%;
   background-color: white; 
-  /* border: solid black 2px; */
   background: url(./img/cc239a-3ad0-82fc0.jpeg);
   background-position: center;
   background-repeat: no-repeat;
   background-size: contain;
-  /* border-radius: 2%; */
 }
 
 .job2-back {
@@ -251,12 +260,10 @@
   flex-direction: column;
   background-color: #e79b25;
   transform: rotateY(180deg);
+  -moz-transform: rotateY(180deg);
+  -webkit-transform: rotateY(180deg);
+  -o-transform: rotateY(180deg);
 }
-
-
-
-
-
 
 .flip-card3 {
   display: flex;
@@ -267,8 +274,10 @@
   background-color: transparent;
   width: 100%;
   height: 100%;
-  /* border: 1px solid #f1f1f1; */
   perspective: 1000px;
+  -webkit-perspective: 1000px;
+  -o-perspective: 1000px;
+  -moz-perspective: 1000px;
 }
 
 .flip-card3-inner {
@@ -278,12 +287,19 @@
   text-align: center;
   transition: transform 1s;
   transform-style: preserve-3d;
-  /* transform-origin: center right; */
+  -webkit-transform-style: preserve-3d;
+  -webkit-transition: -webkit-transform 1s;
+  -o-transform-style: preserve-3d;
+  -o-transition: -o-transform 1s;
+  -moz-transform-style: preserve-3d;
+  -moz-transition: -moz-transform 1s;
 }
 
 .flip-card3:hover .flip-card3-inner {
   transform: rotateY(180deg);
-  /* transform: translateX(-100%) rotateY(180deg); */
+  -moz-transform: rotateY(180deg);
+  -webkit-transform: rotateY(180deg);
+  -o-transform: rotateY(180deg);
 }
 
 .education1, .education1-back {
@@ -291,13 +307,14 @@
   width: 100%;
   height: 100%;
   backface-visibility: hidden;
+  -moz-backface-visibility: hidden;
+  -webkit-backface-visibility: hidden;
+  -o-backface-visibility: hidden;
 }
 
 .education1 {  
   height: 100%;
   width: 100%;
-  /* border: solid black 2px; */
-  /* border-radius: 2%; */
   background: url(./img/unilogo.png);
   background-position: center;
   background-repeat: no-repeat;
@@ -311,6 +328,9 @@
   background-color: #004E71;
   color: white;
   transform: rotateY(180deg);
+  -moz-transform: rotateY(180deg);
+  -webkit-transform: rotateY(180deg);
+  -o-transform: rotateY(180deg);
 }
 
 .flip-card4 {
@@ -322,8 +342,10 @@
   background-color: transparent;
   width: 100%;
   height: 100%;
-  /* border: 1px solid #f1f1f1; */
   perspective: 1000px;
+  -webkit-perspective: 1000px;
+  -o-perspective: 1000px;
+  -moz-perspective: 1000px;
 }
 
 .flip-card4-inner {
@@ -333,27 +355,35 @@
   text-align: center;
   transition: transform 1s;
   transform-style: preserve-3d;
-  /* transform-origin: center right; */
+  -webkit-transform-style: preserve-3d;
+  -webkit-transition: -webkit-transform 1s;
+  -o-transform-style: preserve-3d;
+  -o-transition: -o-transform 1s;
+  -moz-transform-style: preserve-3d;
+  -moz-transition: -moz-transform 1s;
 }
 
 .flip-card4:hover .flip-card4-inner {
   transform: rotateY(180deg);
-  /* transform: translateX(-100%) rotateY(180deg); */
+  -moz-transform: rotateY(180deg);
+  -webkit-transform: rotateY(180deg);
+  -o-transform: rotateY(180deg);
 }
 
 .education2, .education2-back {
-  position: absolute;
   width: 100%;
   height: 100%;
+  position: absolute;
   backface-visibility: hidden;
+  -moz-backface-visibility: hidden;
+  -webkit-backface-visibility: hidden;
+  -o-backface-visibility: hidden;
 }
 
 .education2 {
   height: 100%;
   width: 100%;
   background-color: white; 
-  /* border: solid black 2px; */
-  /* border-radius: 2%; */
   background: url(./img/coder.jpg);
   background-position: center;
   background-repeat: no-repeat;
@@ -364,7 +394,10 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #004E71;
   color: white;
+  background-color: #004E71;
   transform: rotateY(180deg);
+  -moz-transform: rotateY(180deg);
+  -webkit-transform: rotateY(180deg);
+  -o-transform: rotateY(180deg);
 }
