--- a/css/container.css
+++ b/css/container.css
@@ -55,7 +55,7 @@
 .about-grid {
   width: 100%;
   height: 100%;
-  /* background-color: white; */
+  background-color: white;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: 1fr 0.5fr 1fr;
@@ -68,6 +68,15 @@
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: 0.5fr 1fr 1fr;
+}
+
+.index-grid {
+  width: 100%;
+  height: 100%;
+  background-color: white;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: 1fr 1fr 1fr;
 }
 
 .contact-header {
