--- a/css/content.css
+++ b/css/content.css
@@ -1,11 +1,12 @@
 h1 {
   display: flex;
   justify-content: center;
+  grid-row: 2 / 3; 
+  grid-column: 2 / 3;
   align-items: center;
   text-align: center;
   font-family: 'Patua One', cursive;
   color: black;
-  /* text-shadow: 0px 4px 4px rgba(0,0,0,0.5); */
   margin: 0 10px 130px 10px;
   padding: 20px;
   font-size: 44px;
@@ -82,20 +83,16 @@ p {
   height: 38px;
   width: 294px;
   font-family: 'Montserrat', sans-serif;
-  font-size: 11px;
+  font-size: 12px;
   border: 1px solid black;
-  /* text-align: center; */
-  /* box-shadow: 0 10px 6px -6px #777; */
 }
 
 #email {
   height: 38px;
   width: 294px;
   font-family: 'Montserrat', sans-serif;
-  font-size: 11px;
+  font-size: 12px;
   border: 1px solid black;
-  /* text-align: center; */
-  /* box-shadow: 0 10px 6px -6px #777; */
 }
 
 #comment-box {
@@ -104,14 +101,145 @@ p {
   width: 294px;
   text-align: start;
   border: 1px solid black;
-  /* box-shadow: 0 10px 6px -6px #777; */
-  font-size: 11px;
+  font-size: 12px;
 }
 
 #submit {
   margin-bottom: 20px;
   font-family: 'Montserrat', sans-serif;
   height: 30px;
-  /* border-radius: 10%; */
 }
 
+.index-spaceship {
+  margin-top: 20px;
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  grid-row: 2 / 3; 
+  grid-column: 1 / 4;
+  animation: index 10s linear 1 forwards;
+}
+
+.intro-spaceship {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  grid-row: 2 / 3; 
+  grid-column: 1 / 4;
+  animation: index 10s linear 1 forwards;
+}
+
+.spaceship {
+  height: 66.667px;
+  width: 195px;
+}
+
+.about-spaceship {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  grid-row: 2 / 3; 
+  grid-column: 1 / 4;
+  animation: index 10s linear 1 forwards;
+}
+
+.projects-spaceship {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  grid-row: 2 / 3; 
+  grid-column: 1 / 4;
+  animation: index 10s linear 1 forwards;
+}
+
+.contact-spaceship {
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  grid-row: 3 / 4; 
+  grid-column: 1 / 4;
+  animation: index 10s linear 1 forwards;
+}
+
+@keyframes index {
+
+  99%{
+    opacity: 1;
+    transform: translate(2900px)
+  }
+
+  100%{
+    position: absolute;
+    left:-10000px;
+    top: auto;
+    width: 1px;
+    height: 1px;
+    overflow: hidden;
+  }
+
+}
+/* 
+@keyframes intro {
+
+  0%{
+    opacity: 1;
+  }
+
+  99%{
+    opacity: 1;
+    transform: translate(1450px)
+  }
+
+  100%{
+    opacity: 0;
+    transform: translate(0px)
+  }
+}
+
+@keyframes about {
+
+  0%{
+    opacity: 1;
+  }
+
+  99%{
+    opacity: 1;
+  }
+
+  100%{
+    opacity: 0;
+    transform: translate(1450px)
+  }
+}
+
+@keyframes projects {
+
+  0%{
+    opacity: 1;
+  }
+
+  99%{
+    opacity: 1;
+  }
+
+  100%{
+    opacity: 0;
+    transform: translate(1450px)
+  }
+}
+
+@keyframes contact {
+
+  0%{
+    opacity: 1;
+  }
+
+  99%{
+    opacity: 1;
+  }
+
+  100%{
+    opacity: 0;
+    transform: translate(1450px)
+  }
+} */
