--- a/css/content.css
+++ b/css/content.css
@@ -6,28 +6,30 @@ h1 {
   align-items: center;
   text-align: center;
   font-family: 'Patua One', cursive;
+  font-size: 44px;
   color: black;
   margin: 0 10px 130px 10px;
   padding: 20px;
-  font-size: 44px;
   border: solid black 5px;
+  box-shadow: 5px 10px 8px #888888;
 }
 
 h3 {
   text-align: center;
   font-family: 'Patua One', cursive;
-  color: white;
   font-size: 19px;
+  color: white;
 }
 
 h4 {
   font-family: 'Montserrat', sans-serif;
+  font-size: 18px;
   color: white;
 }
  
 p {
   font-family: 'Montserrat', sans-serif;
-  font-size: 16px;
+  font-size: 17px;
 }
 
 .avatar {
@@ -52,27 +54,27 @@ p {
 }
 
 .project1:hover .project-overlay {
-  opacity: 0.5;
+  opacity: 0.9;
 }
 
 .project2:hover .project-overlay {
-  opacity: 0.5;
+  opacity: 0.9;
 }
 
 .project3:hover .project-overlay {
-  opacity: 0.5;
+  opacity: 0.9;
 }
 
 .project4:hover .project-overlay {
-  opacity: 0.5;
+  opacity: 0.9;
 }
 
 .project5:hover .project-overlay {
-  opacity: 0.5;
+  opacity: 0.9;
 }
 
 .project6:hover .project-overlay {
-  opacity: 0.5;
+  opacity: 0.9;
 }
 
 .logo:hover {
@@ -84,6 +86,7 @@ p {
   width: 294px;
   font-family: 'Montserrat', sans-serif;
   font-size: 12px;
+  text-align: center;
   border: 1px solid black;
 }
 
@@ -92,31 +95,32 @@ p {
   width: 294px;
   font-family: 'Montserrat', sans-serif;
   font-size: 12px;
+  text-align: center;
   border: 1px solid black;
 }
 
 #comment-box {
-  font-family: 'Montserrat', sans-serif;
   height: 75px;
   width: 294px;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 12px;
   text-align: start;
   border: 1px solid black;
-  font-size: 12px;
 }
 
 #submit {
-  margin-bottom: 20px;
-  font-family: 'Montserrat', sans-serif;
   height: 30px;
+  font-family: 'Montserrat', sans-serif;
+  margin-bottom: 20px;
 }
 
 .index-spaceship {
-  margin-top: 20px;
   display: flex;
   justify-content: flex-start;
   align-items: flex-start;
   grid-row: 2 / 3; 
   grid-column: 1 / 4;
+  margin-top: 20px;
   animation: index 10s linear 1 forwards;
 }
 
@@ -178,68 +182,3 @@ p {
   }
 
 }
-/* 
-@keyframes intro {
-
-  0%{
-    opacity: 1;
-  }
-
-  99%{
-    opacity: 1;
-    transform: translate(1450px)
-  }
-
-  100%{
-    opacity: 0;
-    transform: translate(0px)
-  }
-}
-
-@keyframes about {
-
-  0%{
-    opacity: 1;
-  }
-
-  99%{
-    opacity: 1;
-  }
-
-  100%{
-    opacity: 0;
-    transform: translate(1450px)
-  }
-}
-
-@keyframes projects {
-
-  0%{
-    opacity: 1;
-  }
-
-  99%{
-    opacity: 1;
-  }
-
-  100%{
-    opacity: 0;
-    transform: translate(1450px)
-  }
-}
-
-@keyframes contact {
-
-  0%{
-    opacity: 1;
-  }
-
-  99%{
-    opacity: 1;
-  }
-
-  100%{
-    opacity: 0;
-    transform: translate(1450px)
-  }
-} */
