--- a/css/index.css
+++ b/css/index.css
@@ -1,9 +1,4 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat|Patua+One');
-/* @import url('https://fonts.googleapis.com/css?family=Indie+Flower|Pacifico');
-@import url('https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300');
-@import url('https://fonts.googleapis.com/css?family=Raleway');
-@import url('https://fonts.googleapis.com/css?family=Roboto'); */
-
 @import '../css/cards.css';
 @import '../css/container.css';
 @import '../css/content.css';
@@ -13,11 +8,6 @@
 * {
   margin: 0;
 }
-
-/* :root {
-  --txt-shadow:     0px 4px 4px rgba(0,0,0,0.5);
-  } */
-
   
 @media only screen and (max-width: 435px) {
   .white-navbar {
@@ -27,30 +17,30 @@
   .navbar-links {
   display: flex;
   justify-content: flex-end;
-  height: 100%;
   align-items: center;
+  height: 100%;
   margin: 0 15px 0 0;
   }
 
   .black-link {
-    margin: 0px 5px;
-    text-decoration: none;
     color: black;
+    text-decoration: none;
     font-family: 'Patua One', cursive;
+    margin: 0px 5px;
   }
 
   h1 {
     display: flex;
     justify-content: center;
+    align-items: center;
     grid-row: 2 / 3; 
     grid-column: 1 / 4;
-    align-items: center;
-    text-align: center;
-    font-family: 'Patua One', cursive;
     color: black;
+    font-size: 26px;
+    font-family: 'Patua One', cursive;
+    text-align: center;
     margin: 0 10px 130px 10px;
     padding: 20px;
-    font-size: 26px;
     border: solid black 5px;
   } 
 
@@ -104,6 +94,14 @@
     grid-column: 1 / 4;
     animation: index 6s linear forwards;
   }
+
+  .intro-content {
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    grid-row: 3 / 4; 
+    grid-column: 1 / 4;
+  }
   
   @keyframes index {
     99%{
@@ -120,45 +118,4 @@
       overflow: hidden;
     }
   }
-
-  /* @keyframes intro {
-    0%{
-      opacity: 1;
-    }
-  
-    100%{
-      transform: translate(435px)
-    }
-  }
-
-  @keyframes about {
-    0%{
-      opacity: 1;
-    }
-  
-    100%{
-      transform: translate(435px)
-    }
-  }
-
-  @keyframes projects {
-    0%{
-      opacity: 1;
-    }
-  
-    100%{
-      transform: translate(435px)
-    }
-  }
-
-  @keyframes contact {
-    0%{
-      opacity: 1;
-    }
-  
-    100%{
-      transform: translate(435px)
-    }
-  } */
-
 }
