--- a/css/cards.css
+++ b/css/cards.css
@@ -25,6 +25,7 @@
   justify-content: center;
   align-items: center;
   text-align: center;
+  flex-direction: column;
   height: 100%;
   width: 100%;
   opacity: 0;
@@ -41,7 +42,7 @@
   height: 100%;
   width: 100%;
   background-color: white; 
-  background: url(./img/adam-miller.jpg);
+  background: url(./img/enablr.png);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
